Fix login align

--- a/assets/style.css
+++ b/assets/style.css
@@ -184,7 +184,8 @@ header{
 }
 
 .login{
-    text-align: right;
+    justify-content: end;
+    display: flex;
 }
 
 .container{
@@ -192,7 +193,6 @@ header{
     width: 70%;
     margin: auto;
     max-width: 1152px;
-    
 }
 
 .container_footer{
